using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorParametars 
{
    public const string SightEnemy = "SightEnemy";
    public const string AngleSpeed = "AngleSpeed";
    public const string ListenedEnemy = "ListenedEnemy";
    public const string Speed = "Speed";
    public const string AnimWeight = "AimWeight";
    public const string Shot = "Shot";
    public const string EnemyAlive = "EnemyAlive";
    public const string Died = "Died";
}
